--- a/less/footer.less
+++ b/less/footer.less
@@ -2,7 +2,7 @@
 footer {
   color: #22283B;
   background: #f4f4f4;
-  padding: 20px 0;
+  .spacePadding();
   border: 1px double #e0e0e0;
   border-radius: 10px;
   display: flex;
