--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,7 +11,11 @@
     p {
       padding:0 15px;
     }
-  
+
+    .headerImage {
+      border-radius: 10px;
+      width: 100%;
+    }
   }
 
   .space-images {
@@ -24,6 +28,17 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @phone {
+        width: 100%;
+        margin: 3%;
+      }
+    }
+
+    .sky, .launch {
+      @media @phone {
+        display: none;
+      }
     }
   }
 
@@ -46,8 +61,19 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      flex-direction: column;
+      margin-top: 20px;
+      padding: 10px;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        width: 100%;
+        order: 1;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -58,15 +84,34 @@
       }
 
       .btn {
+        .buttonGenerator (50%, @btn-bg-color, white, 5%, 5%, 0, 0, 100%);
+
+        @media @phone {
+          margin-right: 0;
+        }
       }
+
+      .btn:hover {
+        .buttonGenerator (50%, @waterloo, @btn-bg-color, 5%, 5%, 0, 0, 100%);
+
+        @media @phone {
+          margin-right: 0;
+        }
+      }
+
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
-      img {
+
+      @media @phone {
         width: 100%;
+        margin: 10px 0;
+      }
+
+      img {
+        width: 96%;
         height: auto;
         border-radius: 10px;
       }
